--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Feuerwehr Einsatzübersicht",
-  "short_name": "Feuerwehr",
+  "name": "Kräfteübersicht",
+  "short_name": "Kräfteübersicht",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0b0f14",
@@ -18,3 +18,4 @@
     }
   ]
 }
+
